// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`indentation.ts: Should indent back to 0 when at max indentation 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "test",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`indentation.ts: Should indent to max indentation and no more 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "test",
          "type": "text",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "level": 6,
          },
          "type": "indentation",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`indentation.ts: Should indent when tab is pressed 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "test",
          "type": "text",
        },
      ],
      "marks": Array [
        Object {
          "attrs": Object {
            "level": 1,
          },
          "type": "indentation",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;

exports[`indentation.ts: Should not indent backwards when at 0 indentation 1`] = `
Object {
  "content": Array [
    Object {
      "content": Array [
        Object {
          "text": "test",
          "type": "text",
        },
      ],
      "type": "paragraph",
    },
  ],
  "type": "doc",
}
`;
